content/_generated-doc/3.0/config/quarkus-container-image-container-image-config.adoc

:summaryTableId: quarkus-container-image-container-image-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-container-image-container-image-config_configuration]]link:#quarkus-container-image-container-image-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.group]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.group[quarkus.container-image.group]`

[.description]
--
The group the container image will be part of

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_GROUP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_GROUP+++`
endif::add-copy-button-to-env-var[]
--|string 
|`${user.name}`


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.name]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.name[quarkus.container-image.name]`

[.description]
--
The name of the container image. If not set defaults to the application name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`${quarkus.application.name:unset}`


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.tag]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.tag[quarkus.container-image.tag]`

[.description]
--
The tag of the container image. If not set defaults to the application version

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_TAG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_TAG+++`
endif::add-copy-button-to-env-var[]
--|string 
|`${quarkus.application.version:latest}`


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.additional-tags]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.additional-tags[quarkus.container-image.additional-tags]`

[.description]
--
Additional tags of the container image.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_ADDITIONAL_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_ADDITIONAL_TAGS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.registry]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.registry[quarkus.container-image.registry]`

[.description]
--
The container registry to use

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_REGISTRY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_REGISTRY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.image]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.image[quarkus.container-image.image]`

[.description]
--
Represents the entire image string. If set, then `group`, `name`, `registry`, `tags`, `additionalTags` are ignored

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_IMAGE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.username]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.username[quarkus.container-image.username]`

[.description]
--
The username to use to authenticate with the registry where the built image will be pushed

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.password]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.password[quarkus.container-image.password]`

[.description]
--
The password to use to authenticate with the registry where the built image will be pushed

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.insecure]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.insecure[quarkus.container-image.insecure]`

[.description]
--
Whether or not insecure registries are allowed

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_INSECURE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_INSECURE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.build]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.build[quarkus.container-image.build]`

[.description]
--
Whether or not a image build will be performed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_BUILD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_BUILD+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.push]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.push[quarkus.container-image.push]`

[.description]
--
Whether or not an image push will be performed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_PUSH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_PUSH+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.builder]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.builder[quarkus.container-image.builder]`

[.description]
--
The name of the container image extension to use (e.g. docker, jib, s2i). The option will be used in case multiple extensions are present.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_BUILDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_BUILDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-container-image-container-image-config_quarkus.container-image.labels-labels]]`link:#quarkus-container-image-container-image-config_quarkus.container-image.labels-labels[quarkus.container-image.labels]`

[.description]
--
Custom labels to add to the generated image.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_CONTAINER_IMAGE_LABELS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_CONTAINER_IMAGE_LABELS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===